[gd_scene load_steps=2 format=3 uid="uid://c0oivkmtr8gao"]

[ext_resource type="Script" uid="uid://hxo8nl6k4neq" path="res://scripts/TableLimitsPopup.gd" id="1_jmv8f"]

[node name="LimitsPopup" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(341, 356)
visible = true
script = ExtResource("1_jmv8f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 337.0
offset_bottom = 352.0

[node name="LimitsNameMenu" type="Label" parent="Control"]
layout_mode = 0
offset_right = 333.0
offset_bottom = 348.0
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 1
theme_override_font_sizes/font_size = 25
text = "ЛИМИТЫ:"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.5
offset_top = -174.0
offset_right = 166.5
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TieLimitsNameMenu" type="Label" parent="Control2"]
layout_mode = 0
offset_top = 160.0
offset_right = 333.0
offset_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 0
theme_override_font_sizes/font_size = 25
text = "ИГАЛИТЕ:"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 337.0
offset_bottom = 352.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="MinBet" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Минимум:"

[node name="MinInput" type="LineEdit" parent="MarginContainer/GridContainer"]
layout_mode = 2
placeholder_text = "от"

[node name="MaxBet" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Максимум:"

[node name="MaxInput" type="LineEdit" parent="MarginContainer/GridContainer"]
layout_mode = 2
placeholder_text = "до"

[node name="Step" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Шаг:"

[node name="StepInput" type="LineEdit" parent="MarginContainer/GridContainer"]
layout_mode = 2
placeholder_text = "Кратно"

[node name="GridContainer2" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
columns = 2

[node name="TieMin" type="Label" parent="MarginContainer/GridContainer2"]
layout_mode = 2
text = "Минимум:"

[node name="TieMinInput" type="LineEdit" parent="MarginContainer/GridContainer2"]
layout_mode = 2
placeholder_text = "от"

[node name="TieMax" type="Label" parent="MarginContainer/GridContainer2"]
layout_mode = 2
text = "Максимум:"

[node name="TieMaxInput" type="LineEdit" parent="MarginContainer/GridContainer2"]
layout_mode = 2
placeholder_text = "до"

[node name="TieStep" type="Label" parent="MarginContainer/GridContainer2"]
layout_mode = 2
text = "Шаг:"

[node name="TieStepInput" type="LineEdit" parent="MarginContainer/GridContainer2"]
layout_mode = 2
placeholder_text = "Кратно"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -352.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="ConfirmButton" type="Button" parent="MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "OK"
